<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_outline"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_cadastrar_locais"
            android:icon="@drawable/ic_map_marker_plus"
            android:title="@string/cadastrar_um_local" />

        <item
            android:id="@+id/nav_meus_locais"
            android:icon="@drawable/ic_map_marker_outline"
            android:title="@string/meus_locais" />

        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_information_outline"
            android:title="@string/sobre" />

        <item
            android:id="@+id/nav_entrar"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_entrar" />

        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_logout"
            android:title="@string/sair" />
    </group>
</menu>

